# neutron-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL_AUTHORING_AND_REVIEWING.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: lint.yml  tests.yml
docs/: diffraction-v2-human-review-queue.md  getting-started.md  ground_truths.md  project.md
docs/facilities/: hfir.md  sns.md
docs/instruments/: sns-snap-high-pressure-skill-plan.md  sns-snap-phase0-validation.md  sns-snap-skill-context-intake.md  sns-snap.md
evals/: README.md  models.yaml
evals/reflectometry/: PLAN.md  README.md  questions.yaml
evals/reflectometry/runner/: __init__.py  cli.py  conditions.py  report.py  run.py
evals/reflectometry/runner/backends/: __init__.py  ollama.py
evals/runner/: cli.py  conditions.py  grade.py  judge.py  run.py
examples/: README.md  langchain_ollama_selector.py  langchain_ollama_toolcalling.py  uv_toolcalling.py
frameworks/: README.md
src/neutron_skills/: __init__.py  cli.py  loader.py  models.py  registry.py  retrieve.py  tools.py
src/neutron_skills/instruments/: __init__.py
src/neutron_skills/instruments/sns/: __init__.py
src/neutron_skills/instruments/sns/snap/: __init__.py  ingestion.py
src/neutron_skills/skills/: README.md
src/neutron_skills/skills/diffraction/rietveld-checklist/: SKILL.md
src/neutron_skills/skills/diffraction/rietveld-checklist/assets/: Rietveld-quality-metrics-summary.md
src/neutron_skills/skills/diffraction/rietveld-refinement-workflow/: SKILL.md
src/neutron_skills/skills/diffraction/rietveld-refinement-workflow/assets/: Rietveld-quality-metrics-summary.md
src/neutron_skills/skills/diffraction/sns-snap-calibration-and-geometry/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snap-high-pressure-data-interpretation/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snap-high-pressure-data-interpretation/assets/: high-pressure-data-notes.md
src/neutron_skills/skills/diffraction/sns-snap-reduction-diagnostics/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snap-reduction-workflow-overview/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snap-sample-environment-reduction-special-cases/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snapred-developer-guide/: SKILL.md
src/neutron_skills/skills/diffraction/sns-snapwrap-developer-guide/: SKILL.md
src/neutron_skills/skills/general-scattering/q-range-basics/: SKILL.md
src/neutron_skills/skills/general-scattering/q-range-basics/scripts/: q_range_tools.py  tools.py
src/neutron_skills/skills/reflectometry/: SKILL.md
src/neutron_skills/skills/reflectometry/refl1d-model-script/: SKILL.md
src/neutron_skills/skills/reflectometry/reflectometry-common/: SKILL.md
src/neutron_skills/skills/sans/eqsans-scan-scripting/: SKILL.md
tests/: test_cli.py  test_eval_smoke.py  test_loader.py  test_registry.py  test_retrieve.py  test_snap_ingestion.py  test_tools.py
(+1 files in other folders)
