[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron-skills"
version = "0.1.0"
description = "A curated registry of Agent Skills for neutron scattering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mat Doucet", email = "doucetm@ornl.gov"}
]
keywords = ["neutron", "scattering", "agent-skills", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

# Core dependencies
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Development tools (tests, lint, type-check)
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Examples (LangChain + Ollama demo under examples/)
examples = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
]

# All optional dependencies
all = [
    "neutron-skills[dev,examples]",
]

[project.urls]
Homepage = "https://github.com/neutrons-ai/neutron-skills"
Repository = "https://github.com/neutrons-ai/neutron-skills"

[project.scripts]
neutron-skills = "neutron_skills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neutron_skills = ["py.typed", "skills/**/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                      # Show summary of all test outcomes
    "--strict-markers",         # Error on unknown markers
    "--strict-config",          # Error on unknown config options
    "--cov=src/neutron_skills", # Coverage for your package
    "--cov-report=term-missing", # Show missing lines in coverage
    "--cov-report=html",        # Generate HTML coverage report
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
